Despliegue de frontend en Firebase Hosting y configuración de CORS en backend para la demo