@@ -1,5 +1,6 @@
 package com.SieteStore.SietestoreInit.config;
 
+import java.util.Arrays;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -33,11 +34,17 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://127.0.0.1:5501", "http://localhost:5501"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
+        // 🔥 AGREGAR LA URL DE FIREBASE AQUÍ
+        configuration.setAllowedOrigins(Arrays.asList(
+            "http://127.0.0.1:5501",
+            "http://localhost:5501",
+            "https://sietestore-app.web.app"
+        ));
+        // 🔥 Asegurar que OPTIONS esté incluido
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
